added menu items

--- a/menu.html
+++ b/menu.html
@@ -1,59 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="menu.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="menu.css" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&family=Pacifico&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
     <link
-        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Merriweather+Sans:ital@1&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Merriweather+Sans:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Oswald:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+    />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
-        <nav class="navigation">
-            <div class="media">
-                <span class="icon"><i class="fab fa-instagram"></i></span>
-                <span class="icon"><i class="fab fa-facebook-f"></i></span>
-            </div>
-            <ul class="links">
-                <li class="link">Home</li>
-                <li class="link">About</li>
-                <li class="link">Menu</li>
-                <li class="link">Contact</li>
-            </ul>
-        </nav>
-        <div class="sections">
-            <div class="menu-img">
-                <div class="menu-banner">
-                    <h1 class="title">Menu</h1>
-                    <hr>
-                    <p class="about-deets">Here at Kowski's eats we make something for everyone. Please browse our menu and find something you love<br><br>
-                        All meals listed are prepared in a short time!
+      <nav class="navigation">
+        <div class="media">
+          <span class="icon"><i class="fab fa-instagram"></i></span>
+          <span class="icon"><i class="fab fa-facebook-f"></i></span>
+        </div>
+        <ul class="links">
+          <li class="link">Home</li>
+          <li class="link">About</li>
+          <li class="link">Menu</li>
+          <li class="link">Contact</li>
+        </ul>
+      </nav>
+      <div class="sections">
+        <div class="menu-img">
+          <div class="menu-banner">
+            <h1 class="title">Menu</h1>
+            <hr />
+            <p class="about-deets">
+              Here at Kowski's eats we make something for everyone. Please
+              browse our menu and find something you love<br /><br />
+              All meals listed are prepared in a short time!
+            </p>
+          </div>
+        </div>
+        <div class="menu-sect">
+          <div class="menu-items">
+            <div class="dishes">
+                <h1 class="menu-title">PIZZA: </h1>
+                <div class="dish">
+                    <div class="dish-image">
+                    <img src="pepperoni-pizza.jpg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                    <h3 class="heading">PEPPERONI PIZZA</h3>
+                    <p class="ingredients">
+                        Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
                     </p>
+                    <span class="size-price">Small: $3</span>
+                    <span class="size-price">Medium: $5</span>
+                    <span class="size-price">Large: $10</span>
+                    </div>
                 </div>
-            </div>
-            <div class="menu-sect">
-                <div class="menu-items">
-                    <h1 class="menu-title">we serve: </h1><hr>
-                    <div class="dishes">
-                        <div class="dish">
-                            
-                        </div>
+                <div class="dish">
+                    <div class="dish-image">
+                    <img src="vege-pizza.jpg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                    <h3 class="heading">VEGE PIZZA</h3>
+                    <p class="ingredients">
+                        Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                    </p>
+                    <span class="size-price">Small: $3</span>
+                    <span class="size-price">Medium: $5</span>
+                    <span class="size-price">Large: $10</span>
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-image">
+                    <img src="borewores-pizza.jpg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                    <h3 class="heading">BOREWORES PIZZA</h3>
+                    <p class="ingredients">
+                        Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                    </p>
+                    <span class="size-price">Small: $3</span>
+                    <span class="size-price">Medium: $5</span>
+                    <span class="size-price">Large: $10</span>
+                    </div>
+                </div>
+                <h1 class="menu-title">DRINKS: </h1>
+                <div class="dish">
+                    <div class="dish-image">
+                        <img src="blueberry-smoothie.jpeg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                        <h3 class="heading">BLUEBERRY SMOOTHIE</h3>
+                        <p class="ingredients">
+                            Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                        </p>
+                        <span class="size-price">Small: $3</span>
+                        <span class="size-price">Medium: $5</span>
+                        <span class="size-price">Large: $10</span>
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-image">
+                        <img src="coconut-smoothie.jpeg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                        <h3 class="heading">COCONUT SMOOTHIE</h3>
+                        <p class="ingredients">
+                            Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                        </p>
+                        <span class="size-price">Small: $3</span>
+                        <span class="size-price">Medium: $5</span>
+                        <span class="size-price">Large: $10</span>
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-image">
+                        <img src="strawberry-smoothie.jpeg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                        <h3 class="heading">STRAWBERRY SMOOTHIE</h3>
+                        <p class="ingredients">
+                            Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                        </p>
+                        <span class="size-price">Small: $3</span>
+                        <span class="size-price">Medium: $5</span>
+                        <span class="size-price">Large: $10</span>
+                    </div>
+                </div>
+                <h1 class="menu-title">DESSERT: </h1>
+                <div class="dish">
+                    <div class="dish-image">
+                        <img src="macaroons.jpeg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                        <h3 class="heading">MACAROONS</h3>
+                        <p class="ingredients">
+                            Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                        </p>
+                        <span class="size-price">Small: $3</span>
+                        <span class="size-price">Medium: $5</span>
+                        <span class="size-price">Large: $10</span>
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-image">
+                        <img src="cheese-cake.jpeg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                        <h3 class="heading">CHEESE CAKE</h3>
+                        <p class="ingredients">
+                            Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                        </p>
+                        <span class="size-price">Small: $3</span>
+                        <span class="size-price">Medium: $5</span>
+                        <span class="size-price">Large: $10</span>
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-image">
+                        <img src="chocolate-cake.jpeg" alt="" />
+                    </div>
+                    <div class="dish-info">
+                        <h3 class="heading">CHOCOLATE CAKE</h3>
+                        <p class="ingredients">
+                            Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                        </p>
+                        <span class="size-price">Small: $3</span>
+                        <span class="size-price">Medium: $5</span>
+                        <span class="size-price">Large: $10</span>
                     </div>
                 </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
