--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <nav class="navigation">
+        <!-- <nav class="navigation">
             <div class="media">
                 <span class="icon"><i class="fab fa-instagram"></i></span>
                 <span class="icon"><i class="fab fa-facebook-f"></i></span>
@@ -26,18 +26,18 @@
                 <li class="link">Menu</li>
                 <li class="link">Contact</li>
             </ul>
-        </nav>
-        <div class="bg-img">
+        </nav> -->
+        <!-- <div class="bg-img">
             <main class="welcome">
                 <div class="rest-info">
-                    <img class="rest-logo" src="restaurant-logo.png" alt="">
+                    <img class="rest-logo" src="images/restaurant-logo.png" alt="">
                     <p>KOWSKI'S EATS</p>
                     <hr>
                     <p>DELICACY MADE DELICIOUS</p>
-                    <img class="rest-dine" src="dine.png">
+                    <img class="rest-dine" src="images/dine.png">
                 </div>
             </main>
-        </div>
+        </div> -->
     </div>
     <script src="index.js"></script>
 </body>
