finished JS for the DOM

--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="menu.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&display=swap"
       rel="stylesheet"
@@ -32,12 +31,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="menu.css" />
     <title>Document</title>
   </head>
-
   <body>
     <div class="wrapper">
-      <nav class="navigation">
+      <!-- <nav class="navigation">
         <div class="media">
           <span class="icon"><i class="fab fa-instagram"></i></span>
           <span class="icon"><i class="fab fa-facebook-f"></i></span>
@@ -48,9 +47,9 @@
           <li class="link">Menu</li>
           <li class="link">Contact</li>
         </ul>
-      </nav>
+      </nav> -->
       <div class="sections">
-        <div class="menu-img">
+        <!-- <div class="menu-img">
           <div class="menu-banner">
             <h1 class="title">Menu</h1>
             <hr />
@@ -60,28 +59,28 @@
               All meals listed are prepared in a short time!
             </p>
           </div>
-        </div>
-        <div class="menu-sect">
+        </div> -->
+        <!-- <div class="menu-sect">
           <div class="menu-items">
             <div class="dishes">
                 <h1 class="menu-title">PIZZA: </h1>
                 <div class="dish">
                     <div class="dish-image">
-                    <img src="pepperoni-pizza.jpg" alt="" />
+                      <img src="images/pepperoni-pizza.jpg" alt="" />
                     </div>
                     <div class="dish-info">
-                    <h3 class="heading">PEPPERONI PIZZA</h3>
-                    <p class="ingredients">
-                        Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
-                    </p>
-                    <span class="size-price">Small: $3</span>
-                    <span class="size-price">Medium: $5</span>
-                    <span class="size-price">Large: $10</span>
+                      <h3 class="heading">PEPPERONI PIZZA</h3>
+                      <p class="ingredients">
+                          Tomato, Basil, wheat, turkey pepperoni, mozarella cheese
+                      </p>
+                      <span class="size-price">Small: $3</span>
+                      <span class="size-price">Medium: $5</span>
+                      <span class="size-price">Large: $10</span>
                     </div>
                 </div>
                 <div class="dish">
                     <div class="dish-image">
-                    <img src="vege-pizza.jpg" alt="" />
+                    <img src="images/vege-pizza.jpg" alt="" />
                     </div>
                     <div class="dish-info">
                     <h3 class="heading">VEGE PIZZA</h3>
@@ -95,7 +94,7 @@
                 </div>
                 <div class="dish">
                     <div class="dish-image">
-                    <img src="borewores-pizza.jpg" alt="" />
+                    <img src="images/borewores-pizza.jpg" alt="" />
                     </div>
                     <div class="dish-info">
                     <h3 class="heading">BOREWORES PIZZA</h3>
@@ -110,7 +109,7 @@
                 <h1 class="menu-title">DRINKS: </h1>
                 <div class="dish">
                     <div class="dish-image">
-                        <img src="blueberry-smoothie.jpeg" alt="" />
+                        <img src="images/blueberry-smoothie.jpeg" alt="" />
                     </div>
                     <div class="dish-info">
                         <h3 class="heading">BLUEBERRY SMOOTHIE</h3>
@@ -124,7 +123,7 @@
                 </div>
                 <div class="dish">
                     <div class="dish-image">
-                        <img src="coconut-smoothie.jpeg" alt="" />
+                        <img src="images/coconut-smoothie.jpeg" alt="" />
                     </div>
                     <div class="dish-info">
                         <h3 class="heading">COCONUT SMOOTHIE</h3>
@@ -138,7 +137,7 @@
                 </div>
                 <div class="dish">
                     <div class="dish-image">
-                        <img src="strawberry-smoothie.jpeg" alt="" />
+                        <img src="images/strawberry-smoothie.jpeg" alt="" />
                     </div>
                     <div class="dish-info">
                         <h3 class="heading">STRAWBERRY SMOOTHIE</h3>
@@ -153,7 +152,7 @@
                 <h1 class="menu-title">DESSERT: </h1>
                 <div class="dish">
                     <div class="dish-image">
-                        <img src="macaroons.jpeg" alt="" />
+                        <img src="images/macaroons.jpeg" alt="" />
                     </div>
                     <div class="dish-info">
                         <h3 class="heading">MACAROONS</h3>
@@ -167,7 +166,7 @@
                 </div>
                 <div class="dish">
                     <div class="dish-image">
-                        <img src="cheese-cake.jpeg" alt="" />
+                        <img src="images/cheese-cake.jpeg" alt="" />
                     </div>
                     <div class="dish-info">
                         <h3 class="heading">CHEESE CAKE</h3>
@@ -181,7 +180,7 @@
                 </div>
                 <div class="dish">
                     <div class="dish-image">
-                        <img src="chocolate-cake.jpeg" alt="" />
+                        <img src="images/chocolate-cake.jpeg" alt="" />
                     </div>
                     <div class="dish-info">
                         <h3 class="heading">CHOCOLATE CAKE</h3>
@@ -195,8 +194,9 @@
                 </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
+    <script src="menu.js"></script>
   </body>
 </html>
