--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Noto+Sans&family=Oswald:wght@200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&family=Pacifico&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Merriweather+Sans:ital@1&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Oswald:wght@200;400&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&display=swap"
-    rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Great+Vibes&display=swap" rel="stylesheet">
     <title>Kowski's Restaurant</title>
 </head>
 <body>
     <div class="wrapper">
-        <!-- <nav class="navigation">
-            <div class="media">
-                <span class="icon"><i class="fab fa-instagram"></i></span>
-                <span class="icon"><i class="fab fa-facebook-f"></i></span>
-            </div>
-            <ul class="links">
-                <li class="link">Home</li>
-                <li class="link">About</li>
-                <li class="link">Menu</li>
-                <li class="link">Contact</li>
-            </ul>
-        </nav> -->
-        <!-- <div class="bg-img">
+        <div class="sections">
+            <!-- <nav class="navigation">
+                        <div class="media">
+                            <span class="icon"><i class="fab fa-instagram"></i></span>
+                            <span class="icon"><i class="fab fa-facebook-f"></i></span>
+                        </div>
+                        <ul class="links">
+                            <li class="link">Home</li>
+                            <li class="link">About</li>
+                            <li class="link">Menu</li>
+                            <li class="link">Contact</li>
+                        </ul>
+                    </nav> -->
+            <!-- <div class="bg-img">
             <main class="welcome">
                 <div class="rest-info">
                     <img class="rest-logo" src="images/restaurant-logo.png" alt="">
@@ -38,7 +41,8 @@
                 </div>
             </main>
         </div> -->
+        </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
