deleted commented code

--- a/index.html
+++ b/index.html
@@ -17,31 +17,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="sections">
-            <!-- <nav class="navigation">
-                        <div class="media">
-                            <span class="icon"><i class="fab fa-instagram"></i></span>
-                            <span class="icon"><i class="fab fa-facebook-f"></i></span>
-                        </div>
-                        <ul class="links">
-                            <li class="link">Home</li>
-                            <li class="link">About</li>
-                            <li class="link">Menu</li>
-                            <li class="link">Contact</li>
-                        </ul>
-                    </nav> -->
-            <!-- <div class="bg-img">
-            <main class="welcome">
-                <div class="rest-info">
-                    <img class="rest-logo" src="images/restaurant-logo.png" alt="">
-                    <p>KOWSKI'S EATS</p>
-                    <hr>
-                    <p>DELICACY MADE DELICIOUS</p>
-                    <img class="rest-dine" src="images/dine.png">
-                </div>
-            </main>
-        </div> -->
-        </div>
+        <div class="sections"></div> 
     </div>
     <script src="./dist/bundle.js"></script>
 </body>
